packages/yew-macro/tests/function_component_attr/async-fail.stderr
error: function components can't be async
  --> $DIR/async-fail.rs:10:1
   |
10 | async fn comp(props: &Props) -> Html {
   | ^^^^^
